samples/_failures_safe/1761544478_bee380_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2024cc2.c: In function ‘main’:
./samples/SAFE/__tmp_b2024cc2.c:124:12: error: missing terminating " character
  124 |     printf("
      |            ^
./samples/SAFE/__tmp_b2024cc2.c:124:5: error: expected expression at end of input
  124 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b2024cc2.c:124:5: error: expected declaration or statement at end of input
